--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.android.support:design:+'
+
+    compile 'pl.droidsonroids.gif:android-gif-drawable:+'
 }
