--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
         android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:screenOrientation="landscape"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
         <activity
             android:name="io.weichao.activity.PermissionActivity"
-            android:theme="@style/PermissionTheme.NoActionBar" />
+            android:theme="@style/PermissionTheme.NoActionBar"
+            android:screenOrientation="landscape"/>
     </application>
 
 </manifest>
